fix unit test 3